Made few fixes.
- Dispay of newly created post
- Input clear after post create

--- a/force-app/main/default/classes/ChannelController.cls
+++ b/force-app/main/default/classes/ChannelController.cls
@@ -10,6 +10,12 @@ public with sharing class ChannelController {
         return result;
     }
 
+    @AuraEnabled(Cacheable = true)
+    public static ItemWrapper getFeedItemById(Id itemId) {
+        Channel_Post__c post = new FeedItemsService().getChannelPostsById(itemId);
+        return new ItemWrapper(post.Channel__r.Name, post.Message__c);
+    }
+
     public class ItemWrapper {
         @AuraEnabled
         public String channelName { get; set; }
